scene/itemrenderer_opengl: use the color pipeline to check if color transformations are needed

Comparing the color descriptions can yield in false negatives, when the luminance
levels between two gamma 2.2 encoded images don't match.

BUG: 493295


(cherry picked from commit 260cf817b88635aaeb405b6c1d93a6268e606d62)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>